--- a/PhaserGame/games/SocketCommunicationTest/index.html
+++ b/PhaserGame/games/SocketCommunicationTest/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="//cdn.jsdelivr.net/npm/phaser@3.0.0/dist/phaser.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/phaser@3.17.0/dist/phaser-arcade-physics.min.js"></script>
 </head>
 <body>
         <script src="/socket.io/socket.io.js"></script>
