--- a/PhaserGame/game/index.html
+++ b/PhaserGame/game/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<script src="https://cdn.jsdelivr.net/npm/phaser@3.17.0/dist/phaser-arcade-physics.min.js"></script>
+	<script src="/socket.io/socket.io.js"></script>
 	<script src="js/phaser.min.js"></script>
 	<script src="js/phaser_addon.js"></script>
 	<script src="js/preloader.js"></script>
