--- a/PhaserGame/game/index.html
+++ b/PhaserGame/game/index.html
@@ -7,7 +7,8 @@
 	<script src="js/phaser.min.js"></script>
 	<script src="js/phaser_addon.js"></script>
 	<script src="js/preloader.js"></script>
-	<script src="js/menuscene.js"></script>
+	<script src="js/joinscene.js"></script>
+	<script src="js/loginscene.js"></script>
 	<script src="js/collectobj.js"></script>
 	<script src="js/gamescene.js"></script>
 	<script src="js/tutorial.js"></script>
@@ -37,7 +38,7 @@
 				mode: Phaser.Scale.FIT,
 				autoCenter: Phaser.Scale.CENTER_BOTH
 			},
-			scene: [Preloader, MainMenu, TutorScene, GameScene]
+			scene: [Preloader, JoinMenu, LoginMenu, TutorScene, GameScene]
 		};
 
 
