--- a/PhaserGame/game/html/login.html
+++ b/PhaserGame/game/html/login.html
@@ -119,8 +119,7 @@ input[type="submit"]:active {
 <div class="login">
     <input type="text" placeholder="Username" id="username" name="username">
     <input type="password" placeholder="password" id="password" name="password">
-    <a href="#" class="forgot" name="joinButton">회원가입</a>
-    <a href="#" class="forgot">비밀번호 찾기</a>
+    <a style="cursor:pointer" class="forgot" name="joinButton">회원가입</a>
     <input type="submit" value="Sign In" name="loginButton">
 </div>
 
