--- a/PhaserGame/game/html/chattingBox.html
+++ b/PhaserGame/game/html/chattingBox.html
@@ -1,5 +1,6 @@
 <style>
     input[type=text], textarea {
+        font-size: 18px;
         width: 450px;
         padding: 12px 20px;
         margin: 8px 0;
@@ -10,7 +11,8 @@
     }
 
     input[type=submit] {
-        width: 80px;
+        font-size: 20px;
+        width: 100px;
         background-color: #4CAF50;
         color: white;
         padding: 14px 20px;
@@ -20,6 +22,7 @@
         cursor: pointer;
     }
     #chatbox{
+        font-size: 18px;
         height: 150px;
         resize:none;
         overflow-x:hidden;
