Gamescene외에도 사운드 효과 추가 게임 중 강제 종료에 대한 처리 추가

--- a/PhaserGame/game/index.html
+++ b/PhaserGame/game/index.html
@@ -40,7 +40,7 @@
 				mode: Phaser.Scale.FIT,
 				autoCenter: Phaser.Scale.CENTER_BOTH
 			},
-			scene: [Preloader, JoinMenu, LobbyScene, RoomScene, LoginMenu, TutorScene, GameScene]
+			scene: [Preloader, LobbyScene, RoomScene, LoginMenu, TutorScene, GameScene]
 		};
 
 
